packages/csharp/src/Kreuzberg/runtimes/osx-arm64/native/include/kreuzberg.h


typedef struct KREUZBERGChunkingConfig KREUZBERGChunkingConfig;
typedef struct KREUZBERGDiffOptions KREUZBERGDiffOptions;
typedef struct KREUZBERGDocumentStructure KREUZBERGDocumentStructure;
typedef struct KREUZBERGEmbeddingConfig KREUZBERGEmbeddingConfig;
typedef struct KREUZBERGExtractionResult KREUZBERGExtractionResult;
typedef struct KREUZBERGHierarchyConfig KREUZBERGHierarchyConfig;
typedef struct KREUZBERGImagePreprocessingConfig KREUZBERGImagePreprocessingConfig;
typedef struct KREUZBERGKeywordConfig KREUZBERGKeywordConfig;
typedef struct KREUZBERGLlmBackend KREUZBERGLlmBackend;
typedef struct KREUZBERGLlmConfig KREUZBERGLlmConfig;
typedef struct KREUZBERGMetadata KREUZBERGMetadata;
typedef struct KREUZBERGOcrExtractionResult KREUZBERGOcrExtractionResult;
typedef struct KREUZBERGPaddleOcrConfig KREUZBERGPaddleOcrConfig;
typedef struct KREUZBERGPostProcessorConfig KREUZBERGPostProcessorConfig;
typedef struct KREUZBERGRakeParams KREUZBERGRakeParams;
typedef struct KREUZBERGRedactionConfig KREUZBERGRedactionConfig;
typedef struct KREUZBERGRedactionPattern KREUZBERGRedactionPattern;
typedef struct KREUZBERGRedactionTerm KREUZBERGRedactionTerm;
typedef struct KREUZBERGRerankerConfig KREUZBERGRerankerConfig;
typedef struct KREUZBERGSecurityLimits KREUZBERGSecurityLimits;
typedef struct KREUZBERGServerConfig KREUZBERGServerConfig;
typedef struct KREUZBERGTesseractConfig KREUZBERGTesseractConfig;
typedef struct KREUZBERGTokenCounter KREUZBERGTokenCounter;
typedef struct KREUZBERGTokenReductionConfig KREUZBERGTokenReductionConfig;
typedef struct KREUZBERGTranscriptionConfig KREUZBERGTranscriptionConfig;
typedef struct KREUZBERGTreeSitterConfig KREUZBERGTreeSitterConfig;
typedef struct KREUZBERGTreeSitterProcessConfig KREUZBERGTreeSitterProcessConfig;
typedef struct KREUZBERGYakeParams KREUZBERGYakeParams;
typedef struct KREUZBERGKreuzbergOcrBackendVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*process_image)(const void *user_data,
                           const uint8_t *image_bytes,
                           uintptr_t image_bytes_len,
                           const char *config,
                           char **out_result,
                           char **out_error);
  int32_t (*process_image_file)(const void *user_data,
                                const char *path,
                                const char *config,
                                char **out_result,
                                char **out_error);
  int32_t (*supports_language)(const void *user_data,
                               const char *lang);
  int32_t (*backend_type)(const void *user_data,
                          char **out_result,
                          char **out_error);
  int32_t (*supported_languages)(const void *user_data,
                                 char **out_result,
                                 char **out_error);
  int32_t (*supports_table_detection)(const void *user_data);
  int32_t (*supports_document_processing)(const void *user_data);
  int32_t (*process_document)(const void *user_data,
                              const char *_path,
                              const char *_config,
                              char **out_result,
                              char **out_error);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergOcrBackendVTable;
int32_t kreuzberg_last_error_code(void);
const char *kreuzberg_last_error_context(void);
void kreuzberg_free_string(char *ptr);
void kreuzberg_free_bytes(uint8_t *ptr,
                          uintptr_t len,
                          uintptr_t cap);
KREUZBERGHierarchyConfig *kreuzberg_hierarchy_config_default(void);
KREUZBERGPostProcessorConfig *kreuzberg_post_processor_config_default(void);
KREUZBERGChunkingConfig *kreuzberg_chunking_config_default(void);
KREUZBERGEmbeddingConfig *kreuzberg_embedding_config_default(void);
KREUZBERGRedactionConfig *kreuzberg_redaction_config_default(void);
int32_t kreuzberg_redaction_config_validate(const KREUZBERGRedactionConfig *this_);
KREUZBERGRedactionTerm *kreuzberg_redaction_term_literal(const char *value);
KREUZBERGRedactionTerm *kreuzberg_redaction_term_labeled(const char *label,
                                                         const char *value);
KREUZBERGRedactionPattern *kreuzberg_redaction_pattern_labeled(const char *label,
                                                               const char *pattern);
KREUZBERGRerankerConfig *kreuzberg_reranker_config_default(void);
KREUZBERGTranscriptionConfig *kreuzberg_transcription_config_default(void);
KREUZBERGTreeSitterConfig *kreuzberg_tree_sitter_config_default(void);
KREUZBERGTreeSitterProcessConfig *kreuzberg_tree_sitter_process_config_default(void);
KREUZBERGServerConfig *kreuzberg_server_config_default(void);
char *kreuzberg_server_config_listen_addr(const KREUZBERGServerConfig *this_);
int32_t kreuzberg_server_config_cors_allows_all(const KREUZBERGServerConfig *this_);
int32_t kreuzberg_server_config_is_origin_allowed(const KREUZBERGServerConfig *this_,
                                                  const char *origin);
uintptr_t kreuzberg_server_config_max_request_body_mb(const KREUZBERGServerConfig *this_);
uintptr_t kreuzberg_server_config_max_multipart_field_mb(const KREUZBERGServerConfig *this_);
KREUZBERGSecurityLimits *kreuzberg_security_limits_default(void);
KREUZBERGTokenReductionConfig *kreuzberg_token_reduction_config_default(void);
KREUZBERGLlmBackend *kreuzberg_llm_backend_new(const KREUZBERGLlmConfig *config);
char *kreuzberg_llm_backend_detect(const KREUZBERGLlmBackend *this_,
                                   const char *text,
                                   const char *categories);
char *kreuzberg_llm_backend_detect_with_custom(const KREUZBERGLlmBackend *this_,
                                               const char *text,
                                               const char *categories,
                                               const char *custom_labels);
KREUZBERGTokenCounter *kreuzberg_token_counter_new(void);
void kreuzberg_document_structure_finalize_node_types(KREUZBERGDocumentStructure *this_);
int32_t kreuzberg_document_structure_is_empty(const KREUZBERGDocumentStructure *this_);
KREUZBERGDocumentStructure *kreuzberg_document_structure_default(void);
KREUZBERGExtractionResult *kreuzberg_extraction_result_from_ocr(const KREUZBERGOcrExtractionResult *ocr);
KREUZBERGImagePreprocessingConfig *kreuzberg_image_preprocessing_config_default(void);
KREUZBERGTesseractConfig *kreuzberg_tesseract_config_default(void);
int32_t kreuzberg_metadata_is_empty(const KREUZBERGMetadata *this_);
KREUZBERGDiffOptions *kreuzberg_diff_options_default(void);
KREUZBERGYakeParams *kreuzberg_yake_params_default(void);
KREUZBERGRakeParams *kreuzberg_rake_params_default(void);
KREUZBERGKeywordConfig *kreuzberg_keyword_config_default(void);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_cache_dir(KREUZBERGPaddleOcrConfig *this_,
                                                                     const char *path);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_table_detection(KREUZBERGPaddleOcrConfig *this_,
                                                                           int32_t enable);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_angle_cls(KREUZBERGPaddleOcrConfig *this_,
                                                                     int32_t enable);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_db_thresh(KREUZBERGPaddleOcrConfig *this_,
                                                                         float threshold);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_db_box_thresh(KREUZBERGPaddleOcrConfig *this_,
                                                                             float threshold);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_db_unclip_ratio(KREUZBERGPaddleOcrConfig *this_,
                                                                               float ratio);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_det_limit_side_len(KREUZBERGPaddleOcrConfig *this_,
                                                                              uint32_t length);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_rec_batch_num(KREUZBERGPaddleOcrConfig *this_,
                                                                         uint32_t batch_size);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_drop_score(KREUZBERGPaddleOcrConfig *this_,
                                                                      float score);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_padding(KREUZBERGPaddleOcrConfig *this_,
                                                                   uint32_t padding);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_with_model_tier(KREUZBERGPaddleOcrConfig *this_,
                                                                      const char *tier);
KREUZBERGPaddleOcrConfig *kreuzberg_paddle_ocr_config_default(void);
int32_t kreuzberg_register_ocr_backend(const char *name,
                                       const struct KREUZBERGKreuzbergOcrBackendVTable *vtable,
                                       const void *user_data,
                                       char **out_error);
int32_t kreuzberg_unregister_ocr_backend(const char *name,
                                         char **out_error);