packages/csharp/src/Kreuzberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_hierarchy_config_default")]
    internal static extern IntPtr HierarchyConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_post_processor_config_default")]
    internal static extern IntPtr PostProcessorConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_chunking_config_default")]
    internal static extern IntPtr ChunkingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_embedding_config_default")]
    internal static extern IntPtr EmbeddingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_redaction_config_default")]
    internal static extern IntPtr RedactionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_redaction_config_validate")]
    internal static extern void RedactionConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_redaction_term_literal")]
    internal static extern IntPtr RedactionTermLiteral(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_redaction_term_labeled")]
    internal static extern IntPtr RedactionTermLabeled(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string label,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string value
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_redaction_pattern_labeled")]
    internal static extern IntPtr RedactionPatternLabeled(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string label,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string pattern
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_reranker_config_default")]
    internal static extern IntPtr RerankerConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_transcription_config_default")]
    internal static extern IntPtr TranscriptionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_config_default")]
    internal static extern IntPtr TreeSitterConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tree_sitter_process_config_default")]
    internal static extern IntPtr TreeSitterProcessConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_default")]
    internal static extern IntPtr ServerConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_listen_addr")]
    internal static extern IntPtr ServerConfigListenAddr(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_cors_allows_all")]
    internal static extern int ServerConfigCorsAllowsAll(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_is_origin_allowed")]
    internal static extern int ServerConfigIsOriginAllowed(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string origin
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_max_request_body_mb")]
    internal static extern ulong ServerConfigMaxRequestBodyMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_server_config_max_multipart_field_mb")]
    internal static extern ulong ServerConfigMaxMultipartFieldMb(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_security_limits_default")]
    internal static extern IntPtr SecurityLimitsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_token_reduction_config_default")]
    internal static extern IntPtr TokenReductionConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_llm_backend_new")]
    internal static extern IntPtr LlmBackendNew(
        IntPtr config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_llm_backend_detect")]
    internal static extern IntPtr LlmBackendDetect(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        IntPtr categories
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_llm_backend_detect_with_custom")]
    internal static extern IntPtr LlmBackendDetectWithCustom(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        IntPtr categories,
        IntPtr customLabels
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_token_counter_new")]
    internal static extern IntPtr TokenCounterNew();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_document_structure_finalize_node_types")]
    internal static extern void DocumentStructureFinalizeNodeTypes(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_document_structure_is_empty")]
    internal static extern int DocumentStructureIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_document_structure_default")]
    internal static extern IntPtr DocumentStructureDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_extraction_result_from_ocr")]
    internal static extern IntPtr ExtractionResultFromOcr(
        IntPtr ocr
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_image_preprocessing_config_default")]
    internal static extern IntPtr ImagePreprocessingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_tesseract_config_default")]
    internal static extern IntPtr TesseractConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_metadata_is_empty")]
    internal static extern int MetadataIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_diff_options_default")]
    internal static extern IntPtr DiffOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_yake_params_default")]
    internal static extern IntPtr YakeParamsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_rake_params_default")]
    internal static extern IntPtr RakeParamsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_keyword_config_default")]
    internal static extern IntPtr KeywordConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_cache_dir")]
    internal static extern IntPtr PaddleOcrConfigWithCacheDir(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_table_detection")]
    internal static extern IntPtr PaddleOcrConfigWithTableDetection(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_angle_cls")]
    internal static extern IntPtr PaddleOcrConfigWithAngleCls(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_db_thresh")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbThresh(
        IntPtr handle,
        float threshold
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_db_box_thresh")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbBoxThresh(
        IntPtr handle,
        float threshold
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_db_unclip_ratio")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbUnclipRatio(
        IntPtr handle,
        float ratio
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_det_limit_side_len")]
    internal static extern IntPtr PaddleOcrConfigWithDetLimitSideLen(
        IntPtr handle,
        uint length
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_rec_batch_num")]
    internal static extern IntPtr PaddleOcrConfigWithRecBatchNum(
        IntPtr handle,
        uint batchSize
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_drop_score")]
    internal static extern IntPtr PaddleOcrConfigWithDropScore(
        IntPtr handle,
        float score
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_padding")]
    internal static extern IntPtr PaddleOcrConfigWithPadding(
        IntPtr handle,
        uint padding
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_with_model_tier")]
    internal static extern IntPtr PaddleOcrConfigWithModelTier(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string tier
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_paddle_ocr_config_default")]
    internal static extern IntPtr PaddleOcrConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);

    // Trait Bridge FFI

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_register_ocr_backend")]
    internal static extern int RegisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kreuzberg_unregister_ocr_backend")]
    internal static extern int UnregisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);
